--- a/frontend/src/assets/index.scss
+++ b/frontend/src/assets/index.scss
@@ -1,2 +1,12 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~react-toastify/dist/ReactToastify.css';
+
+.btn,
+.btn:focus{
+  box-shadow: none;
+}
+
+.btn:hover {
+  border-color: none;
+  background-color: none;
+}
